--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "message-in-a-bottle",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mikeyboxx.github.io/message-in-a-bottle/",
   "dependencies": {
     "@react-google-maps/api": "^2.17.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -14,6 +15,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
